feat:  使用JWT验证用户

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -19,6 +19,9 @@
           </a>
         </p>
 
+        <!-- display the errors -->
+        <list-errors [errors]="errors"></list-errors>
+
         <form novalidate (ngSubmit)="submitForm()">
           <fieldset [disabled]="isSubmitting">
 
