--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -3,8 +3,7 @@
     <a class="navbar-brand" routerLink="/">conduit</a>
 
     <!-- Show this for logged out users -->
-    <ul
-        class="nav navbar-nav pull-xs-right">
+    <ul *showAuthed="false" class="nav navbar-nav pull-xs-right">
 
       <li class="nav-item">
         <a class="nav-link"
@@ -32,44 +31,44 @@
     </ul>
 
     <!-- Show this for logged in users -->
-    <!--<ul -->
-        <!--class="nav navbar-nav pull-xs-right">-->
+    <ul *showAuthed="true"
+        class="nav navbar-nav pull-xs-right">
 
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link"-->
-           <!--routerLink="/"-->
-           <!--routerLinkActive="active"-->
-           <!--[routerLinkActiveOptions]="{ exact: true }">-->
-          <!--Home-->
-        <!--</a>-->
-      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link"
+           routerLink="/"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{ exact: true }">
+          Home
+        </a>
+      </li>
 
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link"-->
-           <!--routerLink="/editor"-->
-           <!--routerLinkActive="active">-->
-          <!--<i class="ion-compose"></i>&nbsp;New Article-->
-        <!--</a>-->
-      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link"
+           routerLink="/"
+           routerLinkActive="active">
+          <i class="ion-compose"></i>&nbsp;New Article
+        </a>
+      </li>
 
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link"-->
-           <!--routerLink="/settings"-->
-           <!--routerLinkActive="active">-->
-          <!--<i class="ion-gear-a"></i>&nbsp;Settings-->
-        <!--</a>-->
-      <!--</li>-->
+      <li class="nav-item">
+        <a class="nav-link"
+           routerLink="/"
+           routerLinkActive="active">
+          <i class="ion-gear-a"></i>&nbsp;Settings
+        </a>
+      </li>
 
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link"-->
+      <li class="nav-item">
+        <a class="nav-link">
            <!--[routerLink]="['/profile', currentUser.username]"-->
            <!--routerLinkActive="active">-->
           <!--<img [src]="currentUser.image" *ngIf="currentUser.image" class="user-pic" />-->
           <!--{{ currentUser.username }}-->
-        <!--</a>-->
-      <!--</li>-->
+        </a>
+      </li>
 
-    <!--</ul>-->
+    </ul>
 
   </div>
 </nav>
