--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -45,7 +45,7 @@
 
       <li class="nav-item">
         <a class="nav-link"
-           routerLink="/"
+           routerLink="/article"
            routerLinkActive="active">
           <i class="ion-compose"></i>&nbsp;New Article
         </a>
@@ -53,18 +53,18 @@
 
       <li class="nav-item">
         <a class="nav-link"
-           routerLink="/"
+           routerLink="/settings"
            routerLinkActive="active">
           <i class="ion-gear-a"></i>&nbsp;Settings
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link">
-           <!--[routerLink]="['/profile', currentUser.username]"-->
-           <!--routerLinkActive="active">-->
-          <!--<img [src]="currentUser.image" *ngIf="currentUser.image" class="user-pic" />-->
-          <!--{{ currentUser.username }}-->
+        <a class="nav-link"
+           routerLink='/profile'
+           routerLinkActive="active">
+          <img class="user-pic" />
+          <!--{{ currentUser.username }}-->&nbsp;Profile
         </a>
       </li>
 
