--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -45,7 +45,7 @@
 
       <li class="nav-item">
         <a class="nav-link"
-           routerLink="/article"
+           routerLink="/editor"
            routerLinkActive="active">
           <i class="ion-compose"></i>&nbsp;New Article
         </a>
