--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,31 +1,53 @@
 <div class="profile-page">
-
   <div class="user-info">
     <div class="container">
       <div class="row">
 
         <div class="col-xs-12 col-md-10 offset-md-1">
-          <img [src]="profile.image" alt="" class="user-img">
-          <h4>{{profile.username}}</h4>
-          <p>{{profile.bio}}</p>
-          <a routerLink='/settings'
+          <img [src]="profile.image" class="user-img" />
+          <h4>{{ profile.username }}</h4>
+          <p>{{ profile.bio }}</p>
+          <follow-button
+            [hidden]="isUser"
+            [profile]="profile"
+            (onToggle)="onToggleFollowing($event)">
+          </follow-button>
+          <a [routerLink]="['/settings']"
              [hidden]="!isUser"
              class="btn btn-sm btn-outline-secondary action-btn">
             <i class="ion-gear-a"></i> Edit Profile Settings
           </a>
-
-          <!--<button class="btn btn-sm btn-outline-secondary action-btn">-->
-            <!--<i class="ion-plus-round"></i>-->
-            <!--&nbsp;-->
-            <!--Follow-->
-          <!--</button>-->
-          <follow-button
-            [profile]="profile"
-            [hidden]="isUser"
-            (onToggle)="onToggleFolllowing($event)"
-          >
-          </follow-button>
         </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-10 offset-md-1">
+        <div class="article-toggle">
+          <ul class="nav nav-pills outline-active">
+            <li class="nav-item">
+              <a href="" class="nav-link"
+                 routerLinkActive="active"
+                 [routerLinkActiveOptions]="{exact: true}"
+                 [routerLink]="['/profile', profile.username]"
+                 My Posts
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"
+                 routerLinkActive="active"
+                 [routerLinkActiveOptions]="{exact: true}"
+                 [routerLink]="['/profile', profile.username, 'favorites']"
+                 Favorited Posts
+              ></a>
+            </li>
+          </ul>
+        </div>
+
+        <router-outlet></router-outlet>
 
       </div>
     </div>
