--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -1,6 +1,7 @@
 
 <article-preview
-  *ngFor="let article of results">
+  *ngFor="let article of results"
+  [article]="article">
 </article-preview>
 
 <div class="article-preview"
