--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
 <div class="profile-page">
+
   <div class="user-info">
     <div class="container">
       <div class="row">
@@ -8,10 +9,10 @@
           <h4>{{ profile.username }}</h4>
           <p>{{ profile.bio }}</p>
           <follow-button
-            [hidden]="isUser"
-            [profile]="profile"
-            (onToggle)="onToggleFollowing($event)">
-          </follow-button>
+             [hidden]="isUser"
+             [profile]="profile"
+             (onToggle)="onToggleFollowing($event)">
+           </follow-button>
           <a [routerLink]="['/settings']"
              [hidden]="!isUser"
              class="btn btn-sm btn-outline-secondary action-btn">
@@ -25,34 +26,33 @@
 
   <div class="container">
     <div class="row">
+
       <div class="col-xs-12 col-md-10 offset-md-1">
-        <div class="article-toggle">
+        <div class="articles-toggle">
           <ul class="nav nav-pills outline-active">
             <li class="nav-item">
-              <a href="" class="nav-link"
+              <a class="nav-link"
                  routerLinkActive="active"
-                 [routerLinkActiveOptions]="{exact: true}"
-                 [routerLink]="['/profile', profile.username]"
-                 My Posts
-              ></a>
+                 [routerLinkActiveOptions]="{ exact: true }"
+                 [routerLink]="['/profile', profile.username]">
+                My Posts
+              </a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link"
+              <a class="nav-link"
                  routerLinkActive="active"
-                 [routerLinkActiveOptions]="{exact: true}"
-                 [routerLink]="['/profile', profile.username, 'favorites']"
-                 Favorited Posts
-              ></a>
+                 [routerLinkActiveOptions]="{ exact: true }"
+                 [routerLink]="['/profile', profile.username, 'favorites']">
+                Favorited Posts
+              </a>
             </li>
           </ul>
         </div>
 
         <router-outlet></router-outlet>
-
       </div>
+
     </div>
   </div>
 
 </div>
-
-
